added line break

--- a/index.html
+++ b/index.html
@@ -408,8 +408,7 @@ summary {
 
 <div id="r-portfolio" class="section level2">
 <h2>R Portfolio</h2>
-<p><strong>Homework #1</strong></p>
-<p>Typora document: <a href="Practice.html">link</a></p>
+<p><strong>Homework #1</strong> <br /> Typora document: <a href="Practice.html">link</a></p>
 </div>
 
 
