--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@ summary {
 <div id="r-portfolio" class="section level2">
 <h2>R Portfolio</h2>
 <p><strong>Homework #1</strong><br />
-<br /> Typora document: <a href="Practice.html">link</a></p>
+<br /> <a href="Practice.html">Typora Document</a></p>
 </div>
 
 
