--- a/index.html
+++ b/index.html
@@ -409,7 +409,8 @@ summary {
 <div id="r-portfolio" class="section level2">
 <h2>R Portfolio</h2>
 <p><strong>Homework #1</strong><br />
-<br /> <a href="Practice.html">Typora Document</a></p>
+<a href="Practice.html">Typora Document</a></p>
+<p><strong>Homework #2</strong> <br /> <a href="HW3.html">Regular Expressions Puzzles</a></p>
 </div>
 
 
