updated index html

--- a/index.html
+++ b/index.html
@@ -411,6 +411,7 @@ summary {
 <p><strong>Homework #1</strong><br />
 <a href="Practice.html">Typora Document</a></p>
 <p><strong>Homework #2</strong> <br /> <a href="HW3.html">Regular Expressions Puzzles</a></p>
+<p><strong>Homework #3</strong> <br /> <a href="HW-4.html">R problems</a></p>
 </div>
 
 
