Completed HW 4 and fixed conflicts

--- a/index.html
+++ b/index.html
@@ -412,6 +412,7 @@ summary {
 <a href="Practice.html">Typora Document</a></p>
 <p><strong>Homework #2</strong> <br /> <a href="HW3.html">Regular Expressions Puzzles</a></p>
 <p><strong>Homework #3</strong> <br /> <a href="HW-4.html">R problems</a></p>
+<p><strong>Homework #4</strong> <br /> <a href="HW-5.html">Matrices, Lists, Data Frames</a></p>
 </div>
 
 
