--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@ summary {
 
 <h1 class="title toc-ignore">Bio381 Web Page</h1>
 <h4 class="author">Lily Shapiro</h4>
-<h4 class="date">1/22/2020</h4>
+<h4 class="date">Spring 2020</h4>
 
 </div>
 
