--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@ summary {
 <p><strong>Homework #5 (will add-in)</strong></p>
 <p><strong>Homework #6</strong> <br /> <a href="HW-7.html">Creating Fake Data Sets to Explore Hypotheses</a></p>
 <p><strong>Homework #7</strong> <br /> <a href="HW-8.html">Data Manipulation using <code>dplyr</code></a></p>
-<p><strong>Homeworkd #8</strong> <br /> <a href="HW-9.html">Organizing Code With Structured Programming</a></p>
+<p><strong>Homework #8</strong> <br /> <a href="HW-9.html">Organizing Code With Structured Programming</a></p>
 </div>
 
 
