Added HW 11 and 12 and associated files

--- a/index.html
+++ b/index.html
@@ -371,15 +371,18 @@ summary {
 
 <div id="r-portfolio" class="section level2">
 <h2>R Portfolio</h2>
-<p><strong>Homework #1</strong><br />
+<p><strong>Homework #2</strong><br />
 <a href="Practice.html">Typora Document</a></p>
-<p><strong>Homework #2</strong> <br /> <a href="HW3.html">Regular Expressions Puzzles</a></p>
-<p><strong>Homework #3</strong> <br /> <a href="HW_4.html">R problems</a></p>
-<p><strong>Homework #4</strong> <br /> <a href="HW-5.html">Matrices, Lists, Data Frames</a></p>
-<p><strong>Homework #5 (will add-in)</strong></p>
-<p><strong>Homework #6</strong> <br /> <a href="HW-7.html">Creating Fake Data Sets to Explore Hypotheses</a></p>
-<p><strong>Homework #7</strong> <br /> <a href="HW-8.html">Data Manipulation using <code>dplyr</code></a></p>
-<p><strong>Homework #8</strong> <br /> <a href="HW-9.html">Organizing Code With Structured Programming</a></p>
+<p><strong>Homework #3</strong> <br /> <a href="HW3.html">Regular Expressions Puzzles</a></p>
+<p><strong>Homework #4</strong> <br /> <a href="HW_4.html">R problems</a></p>
+<p><strong>Homework #5</strong> <br /> <a href="HW-5.html">Matrices, Lists, Data Frames</a></p>
+<p><strong>Homework #6 (will add-in)</strong></p>
+<p><strong>Homework #7</strong> <br /> <a href="HW-7.html">Creating Fake Data Sets to Explore Hypotheses</a></p>
+<p><strong>Homework #8</strong> <br /> <a href="HW-8.html">Data Manipulation using <code>dplyr</code></a></p>
+<p><strong>Homework #9</strong> <br /> <a href="HW-9.html">Organizing Code With Structured Programming</a></p>
+<p><strong>Homework #10</strong> <br /> <a href>For-loops and Randomization tests</a></p>
+<p><strong>Homework #11</strong> <br /> <a href="HW-11.html">Batch Processing</a></p>
+<p><strong>Homework #12</strong> <br /> <a href="HW-12.html">Advanced ggplotting</a></p>
 </div>
 
 
